--- a/messages/zh-cn/msg.conf
+++ b/messages/zh-cn/msg.conf
@@ -316,6 +316,25 @@ Please save note firstly!=请先保存笔记!
 Please sign in firstly!=你还没有登录, 请先登录!
 
 Home=首页
-
+Dashboard=仪表盘
+User=用户
+Users=用户管理
+Add User=添加用户
+Email=邮箱
+EmailConfiguration=邮箱配置
+EmailTemplate=邮箱模板
+Send Email to Users=向用户发送邮件
+Send Email=发送邮件
+Email Logs=发送日志
+Configuration=配置
+SiteURL=网站的地址
+HomePage=首页设置
+DemoUser=游客用户
+Open Register=开启注册
+Upload File Size Limit=上传文件大小限制
+Export PDF=导出文档
+Data=数据
+Mongodb Tool Configuration=Mongodb工具配置
+Backup & Restore=备份和还原
 # 必须要加这个, 奇怪
 [CN]
